Fix wraparound mode in non-pixel brush engines

If the engine uses some internal paint devices, it should properly
initialize supportsWrapAroundMode() value.

BUG:460299